# drhplens

./: .env.example  .gitignore  01-03-INSTALL-NOTES.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  TODOS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: nightly-nse.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-mvp-a-cited-q-a-on-one-ipo/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-DRYRUN-REPORT.md  01-03-INSTALL-NOTES.md  (+15 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent/: demo.py  gmp_schema.py  graph.py  peer_schema.py  policies.py  redflag_schema.py  schemas.py  snapshot_schema.py  state.py
agent/nodes/: __init__.py  cite_check.py  decompose.py  emit.py  gate1_check.py  generate.py  intake.py  refuse_with_reformulation.py  rerank.py  retrieve.py  scrub.py
agent/prompts/: decompose.md  generate.md
app/observability/: __init__.py  cite_check_metric.py  langfuse_client.py  trace_decorators.py
app/static/: drhplens.css
app/util/: css_loader.py
compliance/: banned_tokens.py  disclaimer_text.py  scrubber.py
data/: INGEST_ALL_LATER.md  catalogue.json  catalogue_loader.py
data/gmp/: hyundai_2024_10.json  swiggy_2024_11.json
data/historical/: README.md  ipo_panel.csv  ipo_panel.parquet
data/peers/: swiggy_2024_11.json
data/snapshots/: swiggy_2024_11.json
data/swiggy_drhp/: INGEST_LATER.md  SHA256SUMS  SOURCE.md  swiggy_prospectus_2024_11.docling.json
docs/: CEO-REVIEW-PLAN.md  DEPLOY.md
eval/gold/: boilerplate_phrases.txt  extraction_labels.jsonl  extraction_rubric.md  numeric_eval.jsonl
eval/reports/: 2026-06-25-extraction-f1.md
pages/: 01_methodology.py  02_snapshot.py
pipelines/: confidence.py  gmp.py  gmp_sources.py  ingest.py  ingest_swiggy.py  peer_queries.py  peer_sources.py  peers.py  redflag.py  redflag_queries.py  risk_idf.py  snapshot.py  snapshot_queries.py  verify_index.py
pipelines/historical/: __init__.py  build.py  sources.py  validate.py
scripts/: calibrate_gate1.py  cron_pinger.yml  eval_extraction.py  release_gate.py  run_eval.py  smoke.sh
storage/: vector.py
tests/: conftest.py
tests/eval/: conftest.py  gold_set.jsonl  test_extraction_f1.py  test_p13_recall.py  test_phase1_eval.py  test_phase3_fixtures.py  test_release_gate.py  test_snapshot_eval.py
tests/fixtures/: synthetic_chunks.jsonl
tests/integration/: test_agent_e2e.py  test_drhp_prompt_injection.py  test_jugaad_data_nse.py  test_langfuse_trace.py  test_qdrant_ingest.py  test_second_ipo_e2e.py  test_yfinance_nse_smoke.py
tests/manual/: CITATION_INTERACTION.md
tests/unit/: conftest.py  test_catalogue.py  test_chunker.py  test_citation_renderer.py  test_cite_check.py  test_confidence_rubric.py  test_copy_no_banned_tokens.py  test_css_loader.py  test_decompose.py  test_disclaimer_surface.py  test_disclaimer_surface_render.py  test_drhp_id_allowlist.py  test_drhp_id_threading.py  test_drhp_integrity.py  test_embedder.py  test_format_inr.py  test_format_inr_adoption.py  test_gate1.py  test_generate.py  test_gmp_isolation.py  test_gmp_precompute.py  test_gmp_schema.py  test_graph.py  test_historical_panel.py  test_ingest_generalize.py  test_ingest_idempotent.py  test_methodology_pane.py  test_numeric_grounding.py  test_ofs_fresh.py  test_parse_quality.py  test_parser.py  test_peer_schema.py  test_peer_sources.py  test_peers_precompute.py  test_redflag_precompute.py  test_redflag_schema.py  test_refusal_banner.py  test_refuse_with_reformulation.py  test_retrieve.py  test_risk_idf.py  (+6 more)
tools/: embedder.py  reranker.py
ui/: catalogue.py  chip.py  copy.py  disclaimer.py  expander.py  format_inr.py  methodology_pane.py  refusal_banner.py  snapshot_blocks.py  snapshot_chat.py  state.py
(+57 files in other folders)
