[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "compliance", "storage", "tools", "ui", "pipelines"]

[project]
name = "drhplens"
version = "0.1.0"
description = "Agentic RAG over Indian IPO prospectuses (DRHP/RHP) with span-level citations"
requires-python = ">=3.11"
dependencies = [
    # Agent orchestration
    "langgraph>=1.2,<2",
    # RAG ingestion + query engines
    "llama-index>=0.14,<0.15",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-google-genai",
    "llama-index-llms-groq",
    # PDF parsing
    "docling>=2.95,<3",
    "pdfplumber>=0.11",
    "pymupdf>=1.27",
    # Vector store
    "qdrant-client>=1.18,<2",
    # Embeddings + reranker
    "sentence-transformers>=3",
    "FlagEmbedding",
    # Structured LLM outputs
    "instructor>=1.15,<2",
    # Schemas + validation
    "pydantic>=2.7,<3",
    # UI
    "streamlit>=1.36",
    # Observability
    "langfuse",
    # Utilities
    "tenacity",
    "python-dotenv",
    "httpx>=0.27",
    "typer",
    "rich",
    "tiktoken",
    # Cite-check fuzzy matching (Pattern 3 per 01-RESEARCH.md)
    "rapidfuzz",
    # Indian market data (Phase 4 — peer multiples + historical panel).
    # yfinance pinned to 1.5.1 (major bump, smoke-tested in 04-01); jugaad-data
    # is the nsepy successor for NSE; requests-cache throttles screener/NSE fetches.
    "yfinance==1.5.1",
    "requests-cache==1.3.3",
    "jugaad-data==0.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "eval: marks tests as eval tests (requires --run-eval)",
    "integration: marks tests as integration tests",
]
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
